# initial-setup-django-project

./: .gitignore  CONTRIBUTING.md  README.md  cookiecutter.json  pyproject.toml
{{ cookiecutter.project_name }}/: .pre-commit-config.yml  LICENSE  README.md  pyproject.toml
{{ cookiecutter.project_name }}/.github/workflows/: pep8_check.yml
{{ cookiecutter.project_name }}/settings/: urls.py
{{ cookiecutter.project_name }}/settings/environments/: production.py
{{ cookiecutter.project_name }}/{{ cookiecutter.project_name }}/settings/environments/: base.py  development.py
